samples/_failures_safe/1761190917_2748e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eed733e6.c: In function ‘main’:
./samples/SAFE/__tmp_eed733e6.c:159:5: error: expected declaration or statement at end of input
  159 |     transpose_matrix(&a, &transposed);
      |     ^~~~~~~~~~~~~~~~
